vitrail-sqlite-macros/tests/ui/fail/rust_ty_non_string.stderr
error: `@rust_ty` is only supported on `String` fields
  --> tests/ui/fail/rust_ty_non_string.rs:11:22
   |
11 |         user_id Int @rust_ty(UserId)
   |                      ^^^^^^^
